src/objects/TemplateSetting__c.object
<CustomObject>
    <fields>
        <fullName>AgeFromMonths__c</fullName>
        <label>AgeFrom(Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgeFromYears__c</fullName>
        <label>AgeFrom(Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgeFrom__c</fullName>
        <description>This is to define from which specific age the template should be attached, this should be in the format: __Y__M OR __Y.</description>
        <inlineHelpText>This should be in the format: __Y__M  OR  __Y</inlineHelpText>
        <label>AgeFrom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgeToMonths__c</fullName>
        <label>AgeTo(Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgeToYears__c</fullName>
        <label>AgeTo(Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgeTo__c</fullName>
        <description>This is to define to which specific age the template should be attached, this should be in the format: __Y__M or __Y .</description>
        <inlineHelpText>This should be in the format: __Y__M or  __Y</inlineHelpText>
        <label>AgeTo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtraBrochureToSend__c</fullName>
        <description>If we want to send any extra brochure to customer</description>
        <label>ExtraBrochureToSend</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is to define if a setting is active or not.</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This should be filtered list of all the active label templates available for Market and Program.</description>
        <label>Label</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <errorMessage>There are no Labels available for this Market and program combination!!</errorMessage>
            <filterItems>
                <field>APXTConga4__Conga_Template__c.APXTConga4__Template_Type__c</field>
                <operation>equals</operation>
                <value>Label</value>
            </filterItems>
            <filterItems>
                <field>$Source.Market__c</field>
                <operation>equals</operation>
                <valueField>APXTConga4__Conga_Template__c.Market__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Program__c</field>
                <operation>equals</operation>
                <valueField>APXTConga4__Conga_Template__c.Program__c</valueField>
            </filterItems>
            <infoMessage>Value does not exist or does not match filter criteria.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Template Settings (Label)</relationshipLabel>
        <relationshipName>Template_Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>User should be able to select the language based on which they want to send the brochure, example if the customer stays in Belgium and speaks French or Dutch our template should be in the correct language.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MainLanguage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This should be filtered list of all the active letter templates available for Market and Program.</description>
        <label>Letter</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <errorMessage>There are no Letters available for this Market and program combination!!</errorMessage>
            <filterItems>
                <field>APXTConga4__Conga_Template__c.APXTConga4__Template_Type__c</field>
                <operation>equals</operation>
                <value>Document</value>
            </filterItems>
            <filterItems>
                <field>$Source.Market__c</field>
                <operation>equals</operation>
                <valueField>APXTConga4__Conga_Template__c.Market__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Program__c</field>
                <operation>equals</operation>
                <valueField>APXTConga4__Conga_Template__c.Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Template Settings</relationshipLabel>
        <relationshipName>Template_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>For which market we need to run the rule</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>The user shall select the program for which he/she would like to add a setting.</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordSharingKey__c</fullName>
        <formula>TEXT(Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordSharingKey</label>
        <type>Text</type>
    </fields>
    <label>TemplateSetting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TemplateSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AgeFromFormatCheck</fullName>
        <active>false</active>
        <description>AgeFrom should be in this format: __Y__M Or __Y</description>
        <errorConditionFormula>NOT(
OR(
REGEX(AgeFrom__c , &quot;[0-9]{2}[Y]&quot;),
REGEX(AgeFrom__c , &quot;[0-9]{2}[Y](0[1-9]|1[012])[M]&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>AgeFrom__c</errorDisplayField>
        <errorMessage>Please enter AgeFrom in this format: __Y__M Or __Y</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AgeToFormatCheck</fullName>
        <active>false</active>
        <description>AgeTo should be in this format: __Y__M Or __Y</description>
        <errorConditionFormula>NOT(
OR(
REGEX( AgeTo__c , &quot;[0-9]{2}[Y]&quot;),
REGEX(AgeTo__c , &quot;[0-9]{2}[Y](0[1-9]|1[012])[M]&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>AgeTo__c</errorDisplayField>
        <errorMessage>Please enter AgeTo in this format: __Y__M Or __Y</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AgeToShouldBeAlwaysGreaterThanAgeFrom</fullName>
        <active>true</active>
        <description>AgeToShouldBeAlwaysGreaterThanAgeFrom</description>
        <errorConditionFormula>(AgeToYears__c  * 12) +  AgeToMonths__c  &lt;=  ( AgeFromYears__c * 12) +  AgeFromMonths__c</errorConditionFormula>
        <errorMessage>AgeTo should be always greater than AgeFrom.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AgeToShouldBeGreaterThanAgeFrom</fullName>
        <active>false</active>
        <description>Age to should always be greater than AgeFrom.</description>
        <errorConditionFormula>VALUE(LEFT((AgeTo__c) , 2)) &lt; VALUE(LEFT((AgeFrom__c) , 2))</errorConditionFormula>
        <errorDisplayField>AgeTo__c</errorDisplayField>
        <errorMessage>Age to should always be greater than Age From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MonthValidationRule</fullName>
        <active>true</active>
        <description>Month value cannot exceed 12.</description>
        <errorConditionFormula>OR(AgeFromMonths__c &gt; 12,  AgeToMonths__c &gt; 12)</errorConditionFormula>
        <errorMessage>Please enter valid month!! Cannot exceed value 12</errorMessage>
    </validationRules>
</CustomObject>